--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TechTeam Corner</title>
-		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
 		<link rel="stylesheet" href="css/bulma.css">
 		<link rel="stylesheet" href="css/main.css">
 	</head>
