--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Arvo">
 		<link rel="stylesheet" href="css/bulma.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="icon" href="assets/logo128.png">
 	</head>
 	<body id="base">
 		<div id="centerpiece">
