Added Discord Widget

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<body id="base">
 		<div id="centerpiece">
 			<h1>Tech where you need it</h1>
+			<div class="place">
+			wow>>>
+				<iframe src="https://discordapp.com/widget?id=354214371402055680&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+			</div>
 		</div>
 	</body>
 </html>
