(tmp) Bradisaw's Stream

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div class="place">
 			wow>>>
 				<iframe src="https://discordapp.com/widget?id=354214371402055680&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+                <iframe src="https://player.twitch.tv/?channel=bradisaw" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/bradisaw?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
 			</div>
 		</div>
 	</body>
